# whizzy-mvp

./: .gitignore  1  ARCHITECTURE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE.md  COST_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DYNAMIC_INTENT_CLASSIFICATION.md  QUALITY_TEST_SUMMARY.md  QUICKSTART.md  README.md  RESPONSE_REVIEW_REPORT.md  comprehensive_quality_test.py  comprehensive_test_results.json  cursor-mcp-config.json  debug_briefing.py  debug_briefing_detailed.py  demo.py  deploy_and_test.py  deploy_bot.py  env.example  evaluation_report.md  final_validation_results.json  intelligence_test_results.json  intelligence_validation_results.json  pyproject.toml  quick_test.py  requirements.txt  requirements_slack.txt  setup.py  spot_check.py  test_briefing_fixes.py  test_comprehensive_system.py  test_dag.py  test_dynamic_dbt.py  test_final_validation.py  test_four_agent_pipeline.py  test_intelligence_improvements.py  test_real_data_only.py  (+5 more)
analytics/: .user.yml  dbt_project.yml
app/: __init__.py  agent.py  briefing_system.py  briefings.py  cost_optimized_llm.py  dynamic_dbt_generator.py  dynamic_intent_classifier.py  enhanced_intelligent_system.py  enhanced_whizzy_bot.py  intelligent_agentic_system.py  intelligent_intent_classifier.py  multi_agent_dag.py  real_dbt_executor.py  real_snowflake_mcp.py  smart_intent_router.py  spectrum_aware_router.py  whizzy_bot.py
docs/: ARCHITECTURE_REVIEW.md  DBT_PIPELINE_DOCUMENTATION.md  INTELLIGENT_AGENTIC_SYSTEM.md  MCP_VS_CUSTOM_ANALYSIS.md  MULTI_AGENT_DAG_ARCHITECTURE.md  (+1 more)
mcp_server/: main.py
(+120 files in other folders)
